--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,15 +1,18 @@
 .header{
-    text-align: center;
+    background-color: rgb(195, 141, 250);
+    padding: 30px;
 }
 .navber{
-    margin-top:20px ;
+    display: flex;
+    justify-content: center;
 }
 nav a{
     text-decoration: none;
     margin:20px;
     font-weight: bold;
     color: black;
+    position: static;
 }
 nav a:hover{
-    color: rgb(158, 13, 255);
+    color: rgb(255, 170, 13);
 }
