--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,6 +1,6 @@
 
 .ho-bg-color{
-    background-color: rgb(201, 187, 255);
+    background-color: rgb(255, 255, 255);
 }
 .laptop-info{
     display: flex;
@@ -26,6 +26,38 @@
     font-size: 16.5px;
 }
 .container img{
+    margin-top: 0;
     width: 300px;
     height: 300px;
+}
+h2{
+    margin: 40px;
+    text-align: center;
+}
+.coustomer-btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100px;
+}
+.coustomer-btn-min{
+    padding-inline: 40px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgba(224, 162, 253, 0.747);
+}
+.coustomer-btn-min:hover{
+    background-color: rgb(190, 140, 255);
+}
+.costomer-review{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+@media screen and (max-width: 900px){
+    .costomer-review{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+    }
 }
