--- a/src/Components/Review/Review.css
+++ b/src/Components/Review/Review.css
@@ -1,16 +1,16 @@
 
-.div-container{
+.review-container{
     display: grid;
     grid-template-columns: 3fr;
 }
-.review-container{
+.cart-review-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 0px;
 }
 
 @media screen and (max-width: 900px){
-    .review-container{
+    .cart-review-container{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
